--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,11 +75,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/salary"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="120dp"
         android:layout_toEndOf="@id/add"
         android:backgroundTint="#d0d0d0"
         android:text="Update Record"
         android:textColor="@color/black"
+        android:visibility="invisible"
         tools:ignore="HardcodedText" />
 
     <Button
@@ -92,6 +93,7 @@
         android:backgroundTint="#d0d0d0"
         android:text="Delete"
         android:textColor="@color/black"
+        android:visibility="invisible"
         tools:ignore="HardcodedText" />
 
     <ListView
